# ikaros

Source/UserModules/: CMakeLists.txt  Default_Speed.ikc  Default_Speed_test.ikc  InteractiveWebUI.ikc  Torque_speed_experiment_with_servo_no_load.ikc  copy of franken_recorder.ikc  franken_recorder.ikc  mkmodule.sh  robot_animation_recording.ikc  robot_animation_recording_norobot.ikc
Source/UserModules/Clamp/: CMakeLists.txt  Clamp.cc  Clamp.h  Clamp.ikc
Source/UserModules/Differentiator/: CMakeLists.txt  Differentiator.cc  Differentiator.h
Source/UserModules/Hump/: CMakeLists.txt  Hump.cc  Hump.h  Hump.ikc
Source/UserModules/Interpolator/: CMakeLists.txt  Interpolator.cc  Interpolator.h  Interpolator.ikc
Source/UserModules/KeyframeRecorder/: CMakeLists.txt  KeyframeRecorder.cc  KeyframeRecorder.h  KeyframeRecorder.ikc
Source/UserModules/ListIterator/: ListIterator.cc
Source/UserModules/MovingAverage/: CMakeLists.txt  MovingAverage.cc  MovingAverage.h  MovingAverage.ikc
Source/UserModules/Player/: CMakeLists.txt  Player.cc  Player.h  Player.ikc
Source/UserModules/Recorder/: Recorder.cc  Recorder.h  Recorder.ikc
Source/UserModules/Reset/: CMakeLists.txt  Reset.cc  Reset.h  Reset.ikc
Source/UserModules/RobotPlayer/: CMakeLists.txt  RobotPlayer.cc  RobotPlayer.h  RobotPlayer.ikc  cmake_install.cmake
Source/UserModules/RobotRecorder/: CMakeLists.txt  Makefile  RobotRecorder.cc  RobotRecorder.h  RobotRecorder.ikc  cmake_install.cmake
Source/UserModules/RobotToPos/: CMakeLists.txt  RobotToPos.cc  RobotToPos.h  RobotToPos.ikc  cmake_install.cmake
(+177 files in other folders)
