set(CMAKE_INCLUDE_CURRENT_DIR ON)

add_subdirectory(ListIterator)
add_subdirectory(MinimalModule)
add_subdirectory(MyModule)
add_subdirectory(RobotRecorder)
add_subdirectory(RobotPlayer)
add_subdirectory(RobotToPos)
add_subdirectory(Hump)
add_subdirectory(DerivativeTest)
add_subdirectory(Differentiator)
add_subdirectory(Recorder)
add_subdirectory(KeyframeRecorder)
add_subdirectory(Map)
add_subdirectory(MovingAverage)
add_subdirectory(Sigmoid)
add_subdirectory(Reset)

set(SOURCE ${SOURCE} PARENT_SCOPE)
set(MODULES_INCLUDS ${MODULES_INCLUDS} PARENT_SCOPE)
set(MODULES_LIBS ${MODULES_LIBS} PARENT_SCOPE)
